classDiagram
    class Game{
        -Player player
        -Deck deck
        -int bet_amount
        -int balance
        -int win_count
        -int loss_count
        +__init__(self)
        +start_game(self)
        +place_bet(self, amount: int)
        +deal_initial_cards(self)
        +hit(self)
        +stand(self)
        +double_down(self)
        +split(self)
        +end_game(self)
        +update_balance(self, amount: int)
        +update_win_loss_count(self, result: str)
    }

    class Deck{
        -List[str] cards
        +__init__(self)
        +shuffle(self)
        +deal_card(self) -> str
    }

    class Player{
        -List[List[str]] hands
        -int current_hand_index
        +__init__(self)
        +get_current_hand(self) -> List[str]
        +deal_card(self, card: str)
        +hit(self, deck: Deck)
        +stand(self)
        +double_down(self, deck: Deck)
        +split(self, deck: Deck)
        +get_hand_value(self, hand: List[str]) -> int
        +is_blackjack(self, hand: List[str]) -> bool
        +is_bust(self, hand: List[str]) -> bool
        +get_result(self, dealer_hand: List[str]) -> str
    }

    class Database{
        +__init__(self)
        +create_tables(self)
        +get_balance(self) -> int
        +update_balance(self, amount: int)
        +get_win_count(self) -> int
        +update_win_count(self)
        +get_loss_count(self) -> int
        +update_loss_count(self)
    }

    Game "1" -- "1" Player: has
    Game "1" -- "1" Deck: has
    Player "1" -- "1" Deck: uses
    Game "1" -- "1" Database: has
